07 : register bean api